# pyroptosis_live-cell_timelapse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  uv_setup.sh
Wave1_data/: README.md
Wave1_data/1.preprocess_data/notebooks/: 0.preprocess_raw_data.ipynb  1.define_platemap.ipynb
Wave1_data/1.preprocess_data/scripts/: 0.preprocess_raw_data.py  1.define_platemap.py
Wave1_data/3.cell_segmentation/: HPC_run_segmentation_child.sh  HPC_run_segmentation_parent.sh  local_run_segmentation.sh
Wave1_data/3.cell_segmentation/notebooks/: 1.cell_segmentation.ipynb  2.cytoplasm_issue_visualization.ipynb
Wave1_data/3.cell_segmentation/scripts/: 0.nuclei_segmentation.py  1.cell_segmentation.py  2.cytoplasm_issue_visualization.py
Wave1_data/3.cellprofiling/: perform_cellprofiling_child.sh  perform_cellprofiling_parent.sh
Wave1_data/3.cellprofiling/notebooks/: run_cellprofiler_analysis.ipynb
Wave1_data/3.cellprofiling/pipelines/: analysis_5ch.cppipe  wells_to_ignore.txt
Wave1_data/3.cellprofiling/scripts/: run_cellprofiler_analysis.py
Wave2_data/: README.md  platemap_readme.md
Wave2_data/0.download_data/: README.md
Wave2_data/0.download_data/platemap/: platemap.csv
Wave2_data/1.preprocess_data/: run_preprocessing.sh
Wave2_data/1.preprocess_data/notebooks/: 0.preprocess_raw_data.ipynb
Wave2_data/1.preprocess_data/scripts/: 0.preprocess_raw_data.py
Wave2_data/2.illumination_correction/: README.md  run_ic_child_HPC.sh  run_ic_local.sh  run_ic_locally.sh  run_ic_parent_HPC.sh
Wave2_data/2.illumination_correction/loadfiles/: well_fovs_to_run.tsv
Wave2_data/3.cell_segmentation/: HPC_run_segmentation_child.sh  HPC_run_segmentation_parent.sh  local_run_segmentation.sh
Wave2_data/4.cell_tracking/: HPC_child_cell_tracking_script.sh  HPC_parent_cell_tracking_script.sh  README.md  local_cell_tracking_script.sh
Wave2_data/5.feature_extraction/: HPC_featurization.sh  README.md  run_local_featurization.sh
Wave2_data/6.image_based_profiling/: README.md  local_run.sh
environments/: basicpy_env.yml  image_based_profiling.yaml  main_python_env.yaml  pyroptosis_cell_profiling_env.yaml  timelapse_segmentation.yaml  timelapse_tracking.yaml
utils/: pyproject.toml
utils/src/timelapse_utils/cp_utils/: cp_parallel.py
utils/src/timelapse_utils/featurization_utils/: chammi75_featurization.py  feature_writing_utils.py  resource_profiling.py
utils/src/timelapse_utils/file_utils/: notebook_init_utils.py
utils/src/timelapse_utils/image_utils/: timelapse_image_utils.py
(+72 files in other folders)
